@@ -13,7 +13,6 @@
  *  See the License for the specific language governing permissions and
  *  limitations under the License.
  */
-
 package hu.bme.mit.theta.fronted.litmus2xcfa;
 
 import hu.bme.mit.theta.core.type.Expr;
@@ -22,17 +21,16 @@ import hu.bme.mit.theta.solver.Solver;
 import hu.bme.mit.theta.solver.z3legacy.Z3LegacySolverFactory;
 import hu.bme.mit.theta.xcfa.model.XCFA;
 import hu.bme.mit.theta.xcfa.model.XcfaProcedure;
-import kotlin.Pair;
-import org.junit.Assert;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
-
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
+import kotlin.Pair;
+import org.junit.Assert;
+import org.junit.Test;
+import org.junit.runner.RunWith;
+import org.junit.runners.Parameterized;
 
 @RunWith(Parameterized.class)
 public class LitmusTest {
@@ -51,19 +49,19 @@ public class LitmusTest {
     @Parameterized.Parameter(4)
     public String mcmFilename;
 
-
     @Parameterized.Parameters
     public static Collection<Object[]> data() {
-        return Arrays.asList(new Object[][]{
-                {"/LB.litmus", 2, 2, List.of(11, 7), "/aarch64.cat"},
-        });
+        return Arrays.asList(
+                new Object[][] {
+                    {"/LB.litmus", 2, 2, List.of(11, 7), "/aarch64.cat"},
+                });
     }
 
     @Test
     public void parse() throws IOException {
         final XCFA xcfa = LitmusInterpreter.getXcfa(getClass().getResourceAsStream(filepath));
 
-        Assert.assertEquals(globalsNum, xcfa.getVars().size());
+        Assert.assertEquals(globalsNum, xcfa.getGlobalVars().size());
         Assert.assertEquals(threadNum, xcfa.getInitProcedures().size());
         final List<Pair<XcfaProcedure, List<Expr<?>>>> processes = xcfa.getInitProcedures();
         for (int i = 0; i < processes.size(); i++) {
@@ -85,15 +83,33 @@ public class LitmusTest {
             throw new RuntimeException(e);
         }
 
-//        final XcfaProcessMemEventProvider<ExplState> memEventProvider = new XcfaProcessMemEventProvider<>(processes.size());
-//        final MultiprocLTS<XcfaProcessState<ExplState>, XcfaProcessAction> multiprocLTS = new MultiprocLTS<>(processIds.stream().map(id -> Map.entry(id, new XcfaProcessLTS<ExplState>())).collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)));
-//        final MultiprocInitFunc<XcfaProcessState<ExplState>, ExplPrec> multiprocInitFunc = new MultiprocInitFunc<>(processIds.stream().map(id -> Map.entry(id, new XcfaProcessInitFunc<>(processes.get(id*-1-1), ExplInitFunc.create(solver, True())))).collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)));
-//        final MultiprocTransFunc<XcfaProcessState<ExplState>, XcfaProcessAction, ExplPrec> multiprocTransFunc = new MultiprocTransFunc<>(processIds.stream().map(id -> Map.entry(id, new XcfaProcessTransFunc<>(ExplStmtTransFunc.create(solver, 0)))).collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)));
-//        final XcfaProcessPartialOrd<ExplState> partialOrd = new XcfaProcessPartialOrd<>(ExplOrd.getInstance());
-//        final MCM mcm = CatDslManager.createMCM(new File(getClass().getResource(mcmFilename).getFile()));
-//        final List<MemoryEvent.Write> initialWrites = xcfa.getvars().stream().filter(it -> xcfa.getInitValue(it).isPresent()).map(it -> new MemoryEvent.Write(memEventProvider.getVarId(it), it, null,  Set.of(), null)).collect(Collectors.toList());
-//
-//        final MCMChecker<XcfaProcessState<ExplState>, XcfaProcessAction, ExplPrec> mcmChecker = new MCMChecker<>(memEventProvider, multiprocLTS, multiprocInitFunc, multiprocTransFunc, processIds, initialWrites, partialOrd, ExplState.top(), solver, mcm, NullLogger.getInstance());
-//        mcmChecker.check(ExplPrec.empty());
+        //        final XcfaProcessMemEventProvider<ExplState> memEventProvider = new
+        // XcfaProcessMemEventProvider<>(processes.size());
+        //        final MultiprocLTS<XcfaProcessState<ExplState>, XcfaProcessAction> multiprocLTS =
+        // new MultiprocLTS<>(processIds.stream().map(id -> Map.entry(id, new
+        // XcfaProcessLTS<ExplState>())).collect(Collectors.toMap(Map.Entry::getKey,
+        // Map.Entry::getValue)));
+        //        final MultiprocInitFunc<XcfaProcessState<ExplState>, ExplPrec> multiprocInitFunc =
+        // new MultiprocInitFunc<>(processIds.stream().map(id -> Map.entry(id, new
+        // XcfaProcessInitFunc<>(processes.get(id*-1-1), ExplInitFunc.create(solver,
+        // True())))).collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)));
+        //        final MultiprocTransFunc<XcfaProcessState<ExplState>, XcfaProcessAction, ExplPrec>
+        // multiprocTransFunc = new MultiprocTransFunc<>(processIds.stream().map(id -> Map.entry(id,
+        // new XcfaProcessTransFunc<>(ExplStmtTransFunc.create(solver,
+        // 0)))).collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)));
+        //        final XcfaProcessPartialOrd<ExplState> partialOrd = new
+        // XcfaProcessPartialOrd<>(ExplOrd.getInstance());
+        //        final MCM mcm = CatDslManager.createMCM(new
+        // File(getClass().getResource(mcmFilename).getFile()));
+        //        final List<MemoryEvent.Write> initialWrites = xcfa.getvars().stream().filter(it ->
+        // xcfa.getInitValue(it).isPresent()).map(it -> new
+        // MemoryEvent.Write(memEventProvider.getVarId(it), it, null,  Set.of(),
+        // null)).collect(Collectors.toList());
+        //
+        //        final MCMChecker<XcfaProcessState<ExplState>, XcfaProcessAction, ExplPrec>
+        // mcmChecker = new MCMChecker<>(memEventProvider, multiprocLTS, multiprocInitFunc,
+        // multiprocTransFunc, processIds, initialWrites, partialOrd, ExplState.top(), solver, mcm,
+        // NullLogger.getInstance());
+        //        mcmChecker.check(ExplPrec.empty());
     }
 }
